Stylesheet.css
body {
    font-family: 'Raleway' , sans-serif;
}
header {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
}

header :nth-child(1) {justify-self: start;}

.navs{
    margin: 20px;
    text-decoration: none;
}

.sign-up {
    color: #0065FC;
    font-weight: bold; 
    margin: 20px;
}

#searchbar {
    width: 270px;
    height: 30px;
    display: flex;
    font-weight: bold;
    font-family: 'Raleway' , sans-serif;
}

#searchbutton {
    background-color: #0065FC;
    color: white;
    border-radius: 0px 10px 10px 0px;
    font-size: small;
    width: 50px;
    padding: 5px;
}

#searchbutton-mobile {
    background-color: #0065FC;
    color: white;
    border-radius: 10px;
    font-size: small;
    width: 30px;
    align-items: center;
    justify-content: center;
    display: none;
}

#searchspace {
    width: 180px;
    height: 18px;
    font-size: small;
    padding: 5px;
    border-bottom: solid 1px #F2F2F2;
    border-top: solid 1px #F2F2F2;
}

#searchicon {
    background-color: #F2F2F2;
    width: 20px;
    height: 22px;
    border-radius: 10px 0px 0px 10px;
    display: flex;
    justify-content: center;
    padding: 8px 5px 0px 5px;
    font-size: small;
}

.info {
    display: flex;
    justify-content: space-between;
    width: 260px;
    height: 50px;
    font-family: 'Raleway' , sans-serif;
    font-size: x-small;
}
.info-icon {
    border: 2px solid #F2F2F2;
    border-radius: 20px;
    width: 15px;
    height: 15px;
    margin-right: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #0065FC; 
}

p {
    font-family: 'Raleway' , sans-serif;
    font-size: x-small; 
}

#section1 {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-between;
    margin-top: 15px;
    margin-bottom: 15px;
    font-family: 'Raleway' , sans-serif;
}

#accomodations {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    background-color: #F2F2F2;
    border-radius: 20px;
    width: 870px;
    height: 550px;
    flex-wrap: wrap;
    padding: 5px;
}

#acc-top {
    width: 100%;
    height: 40px;
    margin: 0px 0px 0px 25px;
}

.acc-pic-and-title {
    display: flex;
    flex-direction: column;
    width: 225px;
    height: 175px;
    border: 3px solid white;
    border-radius: 20px;
    box-shadow: 5px 5px 5px #d8d7d794;
    background-color: white;
}

.accomodation-pics {
    width: 225px;
    height: 120px;
    object-fit: cover;
    border-radius: 20px 20px 0px 0px;
}

.acc-pic-title {
    width: 225px;
    height: 55px;
    font-family: 'Raleway' , sans-serif;
    font-size: 10px;
    line-height: 17px;
    border-radius: 0px 0px 20px 20px;
    padding-left: 5px;
}

.bottom-accomodations {
    width: 100%;
}

.blue-star {
    color: #0065FC;
}

.grey-star {
    color: #fde7e754;
}

#most-popular {
    display: flex;
    flex-direction: column;
    background-color: #F2F2F2;
    border-radius: 20px;
    width: 400px;
    height: 560px;
    align-items: center;
    justify-content: space-around;
}

#popular-top {
    width: 331px;
    height: 30px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.mos-pic-and-title {
    display: flex;
    flex-direction: row;
    width: 325px;
    height: 125px;
    border: 3px solid white;
    border-radius: 20px;
    box-shadow: 5px 5px 5px #d8d7d794;
    background-color: white;
}

.mos-pics {
    height:125px;
    width: 110px;
    object-fit: cover;
    border-radius: 20px 0px 0px 20px
}

.mos-title {
    background-color: white;
    width: 215px;
    height: 125px;
    font-family: 'Raleway' , sans-serif;
    font-size: 10px;
    line-height: 25px;
    border-radius: 0px 20px 20px 0px;
    margin-left: 5px;
}

h4 {
    font-family: 'Raleway' , sans-serif;
    font-weight: bold;
}

.filters {
    font-family: 'Raleway' , sans-serif;
    font-weight: bold;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 855px;
    margin: 10px;
}

.filt {
    border-radius: 20px;
    border: solid 2px #F2F2F2;
    border-left-style: none; 
    width: 150px;
    height: 30px;
    display: flex;
    align-items: center;
}

.filter-icons {
    background-color: #DEEBFF;
    border-radius: 20px;
    width: 32px;
    height: 33px;
    margin-right: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
}

i.f-icons {
    color: #0065FC;
    font-size: medium;
}

a:hover {
    text-decoration: overline;
}

a {
    text-decoration: none;
}

#activities {
    display: flex;
    margin-bottom: 25px;
    justify-content: space-between;
}

.big-picture {
   width: 330px;
   height: 450px;
   display: flex;
   flex-direction: column;
}

.big-pic {
    width: 330px;
    height: 440px;
    object-fit: cover;
    border-radius: 20px 20px 0px 0px;
}

.pic-column {
    width: 330px;
    height: 450px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.small-pic {
    width: 330px;
    height: 230px;
    display: flex;
    flex-direction: column;
}

.small-pics {
    width: 330px;
    height: 200px;
    object-fit:cover;
    border-radius: 20px 20px 0px 0px;
}

.long-pic {
    width: 330px;
    height: 180px;
    display: flex;
    flex-direction: column;
}

.long-pics {
    width: 330px;
    height: 150px;
    object-fit: cover;
    border-radius: 20px 20px 0px 0px;
}

.act-pic-title {
    width: 330px;
    height: 30px;
    border-radius: 0px 0px 20px 20px;
    box-shadow: 0px 5px 5px #d8d7d794;
}

footer{
    display: flex;
    flex-direction: row;
    background-color: #F2F2F2;
    height:200px;
    justify-content: space-around;
    font-family: 'Raleway' , sans-serif;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

@media all and (max-width: 768px) {

    header {
        flex-direction: column;
        justify-content: space-between;
        flex-wrap: wrap;
    }

    .header :nth-child(4) {order:2}

    #logo {
        width: 150px;
    }

    #searchbutton {
        display: none;
    }

    #searchbutton-mobile {
        display: flex;
    }
    
    .filters {
        font-weight: bold;
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        height: 170px;
        width: 100%;
        align-items: flex-start;
        flex-wrap: wrap;
    }

    h4 {
        width: 100%;
    }

    h3 {
        width: 100%;
    }

    .filters :nth-child(4) { order:5;}

    #section1 {
        flex-direction: column-reverse;
        width: 100%;
        margin-top: 15px;
        margin-bottom: 15px;
    }

    #most-popular {
        width: 100%;
        height: 500px;
        margin: 15px;
        border-radius: 0px;
    }

    #accomodations {
        flex-direction: column;
        justify-content: space-around;
        width: 100%;
        height: 1500px;
        background-color: white;
    }

    .acc-pic-and-title {
        flex-direction: column;
        width: 100%;
        height: 175px;
        box-shadow: 0px 5px 5px #d8d7d794;
    }

    .accomodation-pics {
        width: 100%;
        height: 120px;
    }
    
    .acc-pic-title {
        width: 100%;
        height: 55px;
    }

    #activities {
        flex-direction: column;
    }

    .big-picture {
        width: 100%;
        height: 180px;
    }

    .big-pic {
        width: 100%;
        height: 150px;
    }

    .pic-column {
        width: 100%;
        height: 370px;
    }

    .small-pic {
        width: 100%;
        height: 180px;
    }

    .small-pics {
        width: 100%;
        height: 150px;
    }

    .long-pic {
        width: 100%;
    }

    .long-pics {
        width: 100%;
    }

    .act-pic-title {
        width: 100%;
    }

    footer{
        flex-direction: column;
        height: 350px;
        padding: 25px;
        width: 100%;
    }
}

